--- a/index.html
+++ b/index.html
@@ -1,177 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cotivity.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="cotivity.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header>
-
-            <nav>
-                <div class="container2">
-
-                    <div class="logo">
-                        <a href="cotivity.html"><img src="cotiviti_light.png" alt=""></a>
-                    </div>
-                    <ul>
-                        <li><a href="cotivity.html" style="color: #ec008c;">Home</a></li>
-                        <li><a href="About.html">About</a></li>
-                        <li><a href="soultion.html">Soultion</a></li>
-                        <li><a href="#">Career</a></li>
-                        <li><a href="contactus.html">Contact Us</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-
-
-        <section class="page1">
-            <div class="container2">
-                <div class="info1">
-                    <h1>Growing Bigger<span>Creating More Opportunities</span></h1>
-                </div>
-                <div class="info2">
-                    <p>We are...</p>
-                    <span>Cotivity Nepal Pvt. Ltd.</span>
-                    <p>(Formally known as Verscend Technologies Pvt.Ldt)<br>
-                        A subsidiary of COTIVITY INC, (formally known as Verscend INC)
-                    </p>
-                </div>
-
+      <header>
+        <nav>
+          <div class="container2">
+            <div class="logo">
+              <a href="index.html"><img src="cotiviti_light.png" alt="" /></a>
             </div>
-        </section>
-        <section class="page2">
-            <div class="container2" id="building">
+            <ul>
+              <li><a href="cotivity.html" style="color: #ec008c">Home</a></li>
+              <li><a href="About.html">About</a></li>
+              <li><a href="soultion.html">Soultion</a></li>
+              <li><a href="#">Career</a></li>
+              <li><a href="contactus.html">Contact Us</a></li>
+            </ul>
+          </div>
+        </nav>
+      </header>
 
-                <h1>Who We Are</h1>
-                <p>Established in 2004, Cotiviti Nepal Pvt. Ltd. is one of the leading healthcare<br>
-                    informatics companies in the Industry. Situated in the heart of the historical<br>
-                    Kathmandu city, Cotiviti Nepal Pvt. Ltd. is considered as one of the most<br>
-                    reputed IT companies in Nepal.
-                </p>
-                <div class="btn">
-                    <a href="#">Learn more</a>
-                </div>
-            </div>
-
-
-
-
-        </section>
-        <section class="page3">
-            <div class="container2">
-                <h1>Work With Us</h1>
-                <p>Our success is the product of our talented staff. We offer employees great growth opportunities, a
-                    team environment, and a chance to work at one of<br> the fastest growing healthcare information
-                    companies. From information technologists to developers, data scientists, network engineers,
-                    designers and <br>more, we’re continually looking for top talent to fill the important positions in
-                    the teams.
-                </p>
-                <div id="whiteborder">
-                    <a href="#">Learn More</a>
-                </div>
-
-
-            </div>
-        </section>
-        <section class="page4">
-
-        </section>
-        <section class="page5">
-            <div class="container2">
-                <h1>Join The Team</h1>
-                <p>Stay Ahead!</p>
-                <div class="margin">
-                    <ul><a href="#">
-                            <li>Project Manager</li>
-                        </a></ul>
-
-                    <ul><a href="#">
-                            <li>Senior NodeJS Developer</li>
-                        </a></ul>
-                    <ul><a href="#">
-                            <li>DevOps Engineer</li>
-                        </a></ul>
-                    <ul><a href="#">
-                            <li>Associate Project Manager</li>
-                        </a></ul>
-                    <ul><a href="#">
-                            <li>Senior Java Developer</li>
-                        </a></ul>
-                    <img src="search.png" alt="">
-                    <span>Didn't find your preferred position?</span>
-                    <span class="second_span">We’re always looking for high performing and energetic individuals. If you
-                        are one, please submit your resume.</span>
-                    <div class="btn">
-                        <a href="#">View All Jobs</a>
-
-                        &nbsp;
-                        <a href="#">Drop Your CV</a>
-                    </div>
-                </div>
-
-
-            </div>
-        </section>
-        <section class="page6">
-            <div class="container2">
-                <h1>Corporate Initiatives</h1>
-                <p>Apart from being involved in development of complex products and<br> providing great services to our
-                    US offices, Cotiviti Nepal Pvt. Ltd. is also<br> involved in various CSR activities.</p>
-                <div class="btn" id="whiteborder">
-                    <a href="#">Learn More</a>
-                </div>
-            </div>
-        </section>
-        <footer>
-            <div class="container2">
-                <div class="left">
-                    <p>Navigate</p>
-                    <ul>
-                        <div class="first_place">
-                            <li><a href="About.html">About</a></li>
-                            <li><a href="#">Solutions</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                        </div>
-                        <div class="second_place">
-                            <li><a href="#">Current Opening</a></li>
-                            <li><a href="#">Drop Your CV</a></li>
-                            <li><a href="#">News And Events</a></li>
-                        </div>
-                        <div class="third_place">
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Careers</a></li>
-                            <li><a href="#">Terms Of Uses</a></li>
-                        </div>
-                    </ul>
-                </div>
-                <div class="right">
-                    <p>Contact Us</p>
-                    <ul>
-                        <li>Cotiviti Nepal Pvt. Ltd.</li>
-                        <li>429 Hattisar</li>
-                        <li>PO Box 6058</li>
-                        <li>Kathmandu, Nepal</li>
-                        <li>Tel: +977-1-4535625</li>
-                    </ul>
-
-                </div>
-            </div>
-        </footer>
+      <section class="page1">
         <div class="container2">
-            <div class="copyright">
-                <p>© 2023 Cotiviti Nepal Pvt. Ltd.<br>All rights reserved.</p>
-            </div>
+          <div class="info1">
+            <h1>Growing Bigger<span>Creating More Opportunities</span></h1>
+          </div>
+          <div class="info2">
+            <p>We are...</p>
+            <span>Cotivity Nepal Pvt. Ltd.</span>
+            <p>
+              (Formally known as Verscend Technologies Pvt.Ldt)<br />
+              A subsidiary of COTIVITY INC, (formally known as Verscend INC)
+            </p>
+          </div>
         </div>
+      </section>
+      <section class="page2">
+        <div class="container2" id="building">
+          <h1>Who We Are</h1>
+          <p>
+            Established in 2004, Cotiviti Nepal Pvt. Ltd. is one of the leading
+            healthcare<br />
+            informatics companies in the Industry. Situated in the heart of the
+            historical<br />
+            Kathmandu city, Cotiviti Nepal Pvt. Ltd. is considered as one of the
+            most<br />
+            reputed IT companies in Nepal.
+          </p>
+          <div class="btn">
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+      </section>
+      <section class="page3">
+        <div class="container2">
+          <h1>Work With Us</h1>
+          <p>
+            Our success is the product of our talented staff. We offer employees
+            great growth opportunities, a team environment, and a chance to work
+            at one of<br />
+            the fastest growing healthcare information companies. From
+            information technologists to developers, data scientists, network
+            engineers, designers and <br />more, we’re continually looking for
+            top talent to fill the important positions in the teams.
+          </p>
+          <div id="whiteborder">
+            <a href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+      <section class="page4"></section>
+      <section class="page5">
+        <div class="container2">
+          <h1>Join The Team</h1>
+          <p>Stay Ahead!</p>
+          <div class="margin">
+            <ul>
+              <a href="#">
+                <li>Project Manager</li>
+              </a>
+            </ul>
 
+            <ul>
+              <a href="#">
+                <li>Senior NodeJS Developer</li>
+              </a>
+            </ul>
+            <ul>
+              <a href="#">
+                <li>DevOps Engineer</li>
+              </a>
+            </ul>
+            <ul>
+              <a href="#">
+                <li>Associate Project Manager</li>
+              </a>
+            </ul>
+            <ul>
+              <a href="#">
+                <li>Senior Java Developer</li>
+              </a>
+            </ul>
+            <img src="search.png" alt="" />
+            <span>Didn't find your preferred position?</span>
+            <span class="second_span"
+              >We’re always looking for high performing and energetic
+              individuals. If you are one, please submit your resume.</span
+            >
+            <div class="btn">
+              <a href="#">View All Jobs</a>
 
+              &nbsp;
+              <a href="#">Drop Your CV</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="page6">
+        <div class="container2">
+          <h1>Corporate Initiatives</h1>
+          <p>
+            Apart from being involved in development of complex products and<br />
+            providing great services to our US offices, Cotiviti Nepal Pvt. Ltd.
+            is also<br />
+            involved in various CSR activities.
+          </p>
+          <div class="btn" id="whiteborder">
+            <a href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="container2">
+          <div class="left">
+            <p>Navigate</p>
+            <ul>
+              <div class="first_place">
+                <li><a href="About.html">About</a></li>
+                <li><a href="#">Solutions</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+              </div>
+              <div class="second_place">
+                <li><a href="#">Current Opening</a></li>
+                <li><a href="#">Drop Your CV</a></li>
+                <li><a href="#">News And Events</a></li>
+              </div>
+              <div class="third_place">
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Terms Of Uses</a></li>
+              </div>
+            </ul>
+          </div>
+          <div class="right">
+            <p>Contact Us</p>
+            <ul>
+              <li>Cotiviti Nepal Pvt. Ltd.</li>
+              <li>429 Hattisar</li>
+              <li>PO Box 6058</li>
+              <li>Kathmandu, Nepal</li>
+              <li>Tel: +977-1-4535625</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+      <div class="container2">
+        <div class="copyright">
+          <p>© 2023 Cotiviti Nepal Pvt. Ltd.<br />All rights reserved.</p>
+        </div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
